# error_analysis

./: Error_Analysis.ipynb  pyproject.toml
execution/: execution.csv  execution_issues.csv  r_script_execution_list.csv  updated_project_id_r_code_file.csv
initial_analysis/: initial_analysis.ipynb  osf_dependency_result.csv
metadata/: project_ids.txt  results.csv
results/: updated_statcodesearch.csv
