[project]
name = "error-analysis"
version = "0.1.0"
description = "Error analysis of the reproducibility check of the OSF projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "pandas>=2.2.3",
    "matplotlib>=3.8.4"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "seaborn>=0.13.2"
]
